@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.InputMismatchException;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 import chess.ChessMatch;
 import chess.ChessPiece;
 import chess.ChessPosition;
@@ -18,6 +17,8 @@ public class Ui {
   public static final String ANSI_RESET = "\u001B[0m";
   public static final String ANSI_GREEN_BACKGROUND = "\u001B[42m";
 
+  private Ui() {}
+
   // https://stackoverflow.com/questions/2979383/how-to-clear-the-console-using-java
   public static void clearScreen() {
     System.out.print("\033[H\033[2J");
@@ -30,12 +31,9 @@ public class Ui {
   public static ChessPosition readChessPosition(Scanner sc) {
     try {
       String in = sc.next();
-
       char column = in.charAt(0);
       int row = Integer.parseInt(in.substring(1));
-
       return new ChessPosition(column, row);
-
     } catch (RuntimeException e) {
       throw new InputMismatchException("The position need be from 'a1' to 'h8'.");
     }
@@ -45,12 +43,8 @@ public class Ui {
    * This method has the responsibility to display the captured pieces on the screen.
    */
   private static void printCapturedPieces(List<ChessPiece> captured) {
-    List<ChessPiece> white =
-        captured.stream().filter(x -> x.getColor() == Color.WHITE).collect(Collectors.toList());
-
-    List<ChessPiece> black =
-        captured.stream().filter(x -> x.getColor() == Color.BLACK).collect(Collectors.toList());
-
+    List<ChessPiece> white = captured.stream().filter(x -> x.getColor() == Color.WHITE).toList();
+    List<ChessPiece> black = captured.stream().filter(x -> x.getColor() == Color.BLACK).toList();
     System.out.println("Captured pieces:");
     System.out.println("White: " + Arrays.toString(white.toArray()));
     System.out.println("Black: " + Arrays.toString(black.toArray()));
@@ -62,25 +56,18 @@ public class Ui {
   public static void printMatch(ChessMatch chessMatch, List<ChessPiece> captured) {
     System.out.println("Current turn: " + chessMatch.getTurn());
     System.out.println();
-
-
     printBoard(chessMatch.getPieces());
-
     System.out.println();
     printCapturedPieces(captured);
     System.out.println();
-
-    if (!chessMatch.getCheckMate()) {
-      System.out.println("Current player: " + chessMatch.getCurrentPlayer());
-
-      if (chessMatch.getCheck()) {
-        System.out.println("The player " + chessMatch.getCurrentPlayer() + " is in CHECK");
-      }
-
-    } else {
-      System.out.printf("CHECK MATE!%n The player %s is the Winner!",
-          chessMatch.getCurrentPlayer());
-
+    if (chessMatch.getCheckMate()) {
+      System.out.println("CHECK MATE!");
+      System.out.println("The player " + chessMatch.getCurrentPlayer() + " is the Winner!");
+      return;
+    }
+    System.out.println("Current player: " + chessMatch.getCurrentPlayer());
+    if (chessMatch.getCheck()) {
+      System.out.println("The player " + chessMatch.getCurrentPlayer() + " is in CHECK");
     }
   }
 
@@ -88,11 +75,10 @@ public class Ui {
    * This print a board with the current state of the game.
    */
   public static void printBoard(ChessPiece[][] pieces) {
-    for (int r = 0; r < pieces.length; r += 1) {
-      System.out.printf("%d ", pieces.length - r);
-
-      for (int c = 0; c < pieces.length; c += 1) {
-        print(pieces[r][c], false);
+    for (int row = 0; row < pieces.length; row += 1) {
+      System.out.printf("%d ", pieces.length - row);
+      for (int column = 0; column < pieces.length; column += 1) {
+        print(pieces[row][column], false);
       }
       System.out.println();
     }
@@ -105,7 +91,6 @@ public class Ui {
   public static void printBoard(ChessPiece[][] pieces, boolean[][] possibleMoves) {
     for (int row = 0; row < pieces.length; row += 1) {
       System.out.printf("%d ", pieces.length - row);
-
       for (int column = 0; column < pieces.length; column += 1) {
         print(pieces[row][column], possibleMoves[row][column]);
       }
